[package]
name = "typename_derive"
version = "0.1.0"
authors = ["Sebastian Wicki <swicki@inf.ethz.ch>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/strymon-system/typename"
documentation = "https://docs.rs/typename_derive"

[lib]
name = "typename_derive"
proc-macro = true

[dependencies]
syn = "0.11"
quote = "0.3"

[dev-dependencies.typename]
path = ".."
version = "0.1.0"
default-features = false
