[package]
name = "typename_derive"
version = "0.1.1"
authors = ["Sebastian Wicki <swicki@inf.ethz.ch>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/strymon-system/typename"
documentation = "https://docs.rs/typename_derive"
description = "Derive plugin for the typename crate."

[lib]
name = "typename_derive"
proc-macro = true

[dependencies]
syn = "^0.15"
quote = "^0.6"

[dev-dependencies.typename]
path = ".."
version = "0.1.0"
default-features = false
