[package]
name = "typename_derive"
version = "0.1.3"
authors = ["Sebastian Wicki <swicki@inf.ethz.ch>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/strymon-system/typename"
documentation = "https://docs.rs/typename_derive"
description = "Derive plugin for the typename crate."

[lib]
name = "typename_derive"
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"

[dev-dependencies.typename]
path = ".."
version = "0.1.1"
default-features = false
